much better benchmark sentences

--- a/web/index.html
+++ b/web/index.html
@@ -221,8 +221,9 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Hebrew G2P Benchmark - Performance Comparison</h1>
-            <p>Hebrew Grapheme-to-Phoneme (G2P) benchmark comparing WER vs CER using IPA transcriptions. 
+            <h1>Hebrew G2P Benchmark</h1>
+            <p>Grapheme-to-Phoneme (G2P) benchmark comparing WER vs CER using IPA transcriptions.
+            Part of the <a href="https://phonikud.github.io" target="_blank" class="header-link">Phonikud project</a>.
             Add your model to our <a href="https://github.com/thewh1teagle/heb-g2p-benchmark" target="_blank" class="header-link">Repo</a>!</p>
         </div>
         
@@ -234,6 +235,10 @@
             <div class="stat">
                 <div class="stat-number" id="best-wer">-</div>
                 <div class="stat-label">Best Accuracy</div>
+            </div>
+            <div class="stat">
+                <div class="stat-number">100</div>
+                <div class="stat-label"><a href="https://github.com/thewh1teagle/heb-g2p-benchmark/blob/main/gt.tsv" target="_blank" style="color: #2563eb; text-decoration: underline; cursor: pointer;">Test Sentences</a></div>
             </div>
         </div>
         
