align with en benchmark with hf space

--- a/web/index.html
+++ b/web/index.html
@@ -43,6 +43,7 @@
                             <th class="metric">WER</th>
                             <th class="metric">CER</th>
                             <th class="metric">Stress WER</th>
+                            <th class="report-link">Report</th>
                         </tr>
                     </thead>
                     <tbody id="table-body">
